navbar layout problem fixed & cdn imports changed to npm imports

--- a/client/main.css
+++ b/client/main.css
@@ -1,5 +1,3 @@
-@import "{}/node_modules/@fortawesome/fontawesome-free/css/all.css";
-
 body {
   font-family: sans-serif;
 }
